# st0x.issuance

./: .coderabbit.yaml  .env.example  .env.secret.example  .env.secrets.example  .envrc  .gitignore  .yamlfmt  AGENTS.md  CLAUDE.md  Cargo.toml  Dockerfile  PLAN.md  README.md  ROADMAP.md  SPEC.md  bootstrap.nix  deploy.nix  docker-compose.template.yaml  flake.nix  keys.nix  os.nix  prep-docker-compose.sh  rollback.sh  rust.nix  services.nix
.cargo/: config.toml
.github/workflows/: deploy-prod.yaml  deploy-staging.yaml  deploy.yaml  docker-build.yaml  externally-merged.yaml  rainix.yaml  rekey.yaml  rollback.yaml
.sqlx/: query-020cbdc0b57d268e4ccce8d128bd50b3f1121c54a96742b0781fd09690cc76a8.json  query-0c11a1a1bbb0e266499ef1354ded6a015b94aa550a57926db06101dbef9a5bd9.json  query-0c80e481fbc4c98b556c805226f2d2509b569b1c3354e7dbb32a28b6dd41f874.json  query-0d3e3ce0928e70338700a126d1bc631a5b0db318a891a83709794f6f11637ab7.json  query-1a60b023e9b4d01b97c9ea1a353d09b477dd2caad6f20ae5c20a73cf9d401053.json  query-1b753b5c17a90c6ebda54576a60533d69a28361447e17622abda66bd114080b2.json  query-1ea911012fed20f9b9bbad280bc08ac05385431a8d5d36aff42c90b06aa24d63.json  query-1f9125753966bffaf24e67920f362efea89a24b36bee1f832d39cbed684c849d.json  query-23770e3ccf645431e446f82d8cc4d17bc4ee87d8066f29cd5548faf8b3ffd5a4.json  query-24c8738bee0444967826b4e27708d34ebffdca09864519a4bf28d6f2b7ae7eec.json  query-2a16d85abe9bf90f216f882f7946ef680a2e76afb28c294c596b555b192f6476.json  query-2b95c2fd54d3b1c2c38078b7df5deec2382bfdbac5475f267d6d67e36ae9e4d6.json  query-2c53a7aa09a5a29ff9dc45d5b5c2078d57d83fe6d5401cfe1f34ba15bfb1eb52.json  query-3bd4b0166dc3c207e9a280b9e05c6fd75d677b60826d0269b58d05e4e3b0f0c5.json  query-411f41f5cfe72a6a9ff047897b89a316adac0bc94f038b250308c0a03ae7528f.json  query-4151d073a7ea1969ce5f3abaa8c2c1db1fa5f81ce6d4d8d4e0bf6b9078c3fbbe.json  query-41eae71bcf47eef0f1aab31901374854816ed9561d0643739c08301a2005ddc9.json  query-490dda713c30140964cd32fbbe1266ffaeb736db8e81174dd7317390b18f75c5.json  query-502bc6f82f7487e76eb0b14f11bf8232d52233fad4318553a500f46a5c40649e.json  query-518b91ee4254125baed4c40b2ff4cc563edf404af28a1e30dcdbdf3adeee51d4.json  query-533e0633262ac4c2a4a78af365d58cdc98a38901f66479a6c93b4c1042f26c26.json  query-6d5f199933dfed5762cfda043c65849137be5b718bc3edabb5b792aa003da9b4.json  query-75eeda59a1894a9dc0481e2fb763b3d7b56ddf2ba3e464c51da0d4350621fbe9.json  query-8ddeb7d12e1ff6e620d747f67b876f7b01622e939bf651d71025734b5568bb91.json  query-8e5c003ae644ddbd3910d6ca1e45ae6049f440408fa5f72fa2c1087598a3606a.json  query-8eba6291b3dd7d52a43f6e8688fc54b34db9eb4ff944fae9c7acea41b3798429.json  query-92ad3529200d53778ca94593eb7d6519a28faa71c2bd3177ef2c4b13ef595789.json  query-9bb3253063cb332994db4d4c3c9e27f28c29d7bcf6a0ff7a1576f893c6d38f32.json  query-9bcf755f5894724fde77014fe835804739d803db04132851bc29a57afefd8db8.json  query-a0e7fd4ad322954aadcb28e53fa73ceff9322223ac20b389465e745625f4ff2e.json  query-a5643fc14c884d97f15476dd339e3e43d1639c80451e83ed9899cc73b35c9fda.json  query-a928374657663e872033e02af9af6ac00544e55eb477301a8abf55cd2c9176d6.json  query-b05283fb40a113c82d1ce23046d4c14c3da54cb41812f70970b8d09a40f51425.json  query-b3f4e9bd85223cb3bc7887301264b8dd3a108f4d59fe83d2be6177f6ffadef40.json  query-b505a8d99b2075d222deb3254e562663dba16f4bb8074f0a304b5546f80c62d5.json  query-bb56c9a04da52a70f9e6e88aa240a0c61c3df34102827ef0774f532af62f161a.json  query-bc2f41e92896e204e6e80d64756780ec0a84e98cd6bbe7ec4101a6f8246c8f99.json  query-bedb8d59cf3941616a084cc61039bd9a2f38918605aff123bd2240c0e8ea472f.json  query-c0d9f5d3484395c0fdcf66c7e1f0d17447129546efba6ba11e1c2b1229653737.json  query-c8ab0a0c2de7e2bb323d09c80708998638ddf2122b3761e867591080f1991b9e.json  (+11 more)
crates/client/: Cargo.toml
crates/client/src/: lib.rs
crates/dto/: Cargo.toml
crates/dto/src/: lib.rs  main.rs
crates/sqlite-es/: Cargo.toml
crates/sqlite-es/src/: cqrs.rs  event_repository.rs  lib.rs  sql_query.rs  testing.rs  view_repository.rs
docs/: alloy.md  apalis.md  cqrs.md  fireblocks.md  ids.md  ops-recovery-guide.md  orchestration.md  workflow.md
infra/: .terraform.lock.hcl  default.nix  main.tf  terraform.tfvars.example  variables.tf
migrations/: 20251017041843_create_account_view.sql  20251017161440_create_tokenized_asset_view.sql  20251017184504_create_mint_view.sql  20251024150419_create_redemption_view.sql  20251025023426_add_wallet_to_account_view.sql  20251028194523_create_receipt_inventory_view.sql  20251201225642_add_unique_email_constraint.sql  20260205212849_create_receipt_burns.sql  20260428084837_create_redemption_backfill_checkpoints.sql  20260519174356_create_poll_checkpoints.sql  20260604234827_migrate_account_view_to_lifecycle.sql  20260605005801_add_snapshot_version_to_snapshots.sql  20260605013108_add_account_emails_uniqueness.sql  20260605013500_migrate_tokenized_asset_view_to_lifecycle.sql  20260615230714_migrate_tokenized_asset_view_freeze_status.sql  20260622164053_apalis_job_tables.sql
nix/: abis.nix  ethgild.nix  tailscale.nix  upgradeable-services.nix
proptest-regressions/redemption/: upcaster.txt
scripts/: bootstrap.sh  smoke-test-image.nu
secret/: secrets.nix
src/: account.rs  admin.rs  auth.rs  bindings.rs  catchers.rs  config.rs  job.rs  lib.rs  lifecycle.rs  main.rs  openapi.rs  poll_checkpoint.rs  replay.rs  telemetry.rs  test_utils.rs  view_replay.rs
src/account/: api.rs  cmd.rs  event.rs  mod.rs  view.rs
src/alpaca/: mock.rs  mod.rs  service.rs
src/auth/: ip_whitelist.rs  mod.rs  rate_limit.rs
src/blockchain/: mock.rs  mod.rs  service.rs
src/fireblocks/: config.rs  mod.rs  signer.rs  vault_service.rs
src/jobs/: mod.rs
src/mint/: api.rs  callback_manager.rs  cmd.rs  conductor.rs  event.rs  job.rs  mint_manager.rs  mod.rs  recovery.rs  (+2 more)
tests/: dynamic_asset.rs  e2e.rs  e2e_mint_flow.rs  e2e_redemption_flow.rs  mint.rs  multi_vault_redemption.rs  receipt_inventory.rs  receipt_transfer.rs  recovery.rs  redemption.rs  redemption_dust.rs  redemption_dust_e2e.rs  smoke.rs  startup_snapshot_compat.rs  tokenized_asset_status.rs  unwhitelist.rs  vault_upgrade.rs
(+47 files in other folders)
