[workspace]
members = [".", "crates/sqlite-es"]
resolver = "2"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
enum_glob_use = "allow"

# `priority = -1` allow for allowing lints enabled by a group to be re-disabled
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

doc_markdown = "allow"
items_after_statements = "allow"
redundant_pub_crate = "allow"

[workspace.dependencies]
async-trait = "0.1.89"
cqrs-es = "0.4.12"
rocket = "0.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
  "sqlite",
  "chrono",
  "runtime-tokio-rustls",
  "macros",
  "migrate",
] }
thiserror = "2.0.17"
tracing = "0.1.41"

[package]
name = "st0x-issuance"
version = "0.1.0"
edition = "2024"

[dependencies]
rocket = { workspace = true, features = ["json"] }
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
tracing.workspace = true
sqlite-es = { path = "crates/sqlite-es" }
chrono = { version = "0.4.42", features = ["serde"] }
thiserror.workspace = true
uuid = { version = "1.18.1", features = ["v4", "serde"] }
cqrs-es.workspace = true
async-trait.workspace = true
clap = { version = "4.5.49", features = ["derive", "env"] }
alloy = { version = "1.0.41", features = [
  "provider-ws",
  "pubsub",
  "node-bindings",
  "rand",
] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
tokio = { version = "1.48.0", features = ["time"] }
reqwest = { version = "0.12.24", features = ["json", "blocking", "gzip"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-opentelemetry = "0.31.0"
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.30.0"
backon = "1.6.0"
futures = "0.3.31"
url = "2.5.7"
anyhow = "1.0.100"
dotenvy = "0.15.7"
itertools = "0.14.0"
base64 = "0.22.1"
ipnetwork = "0.21.1"
subtle = "2.6.1"
governor = "0.10.2"
fireblocks-sdk = "2025.10.17"
apalis = "0.7.4"
apalis-sql = { version = "0.7.4", features = ["sqlite"] }
task-supervisor = { version = "0.3.5", features = ["with_tracing"] }

[lints]
workspace = true

[dev-dependencies]
alloy-node-bindings = "1.0.41"
alloy-sol-types = "1.4.1"
httpmock = "0.8.2"
proptest = "1.10.0"
rust_decimal_macros = "1.40.0"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros"] }
tracing-test = "0.2.6"
