[package]
name = "st0x-issuance"
version = "0.1.0"
edition = "2024"

[dependencies]
event-sorcery = { git = "https://github.com/ST0X-Technology/event-sorcery.git", tag = "0.1.1" }
sqlite-es = { git = "https://github.com/ST0X-Technology/event-sorcery.git", tag = "0.1.1" }
cqrs-es = "0.5.0"
async-trait = "0.1.89"
rocket = { version = "0.5.1", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sqlx = { version = "0.9.0", features = [
  "sqlite",
  "chrono",
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "migrate",
] }
thiserror = "2.0.17"
tracing = "0.1.41"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
clap = { version = "4.5.49", features = ["derive", "env"] }
alloy = { version = "1.0.41", features = [
  "provider-ws",
  "provider-http",
  "pubsub",
  "node-bindings",
  "rand",
] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
tokio = { version = "1.48.0", features = ["time"] }
reqwest = { version = "0.12.24", features = ["json", "blocking", "gzip"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-opentelemetry = "0.31.0"
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.30.0"
backon = "1.6.0"
futures = "0.3.31"
url = "2.5.7"
anyhow = "1.0.100"
dotenvy = "0.15.7"
itertools = "0.14.0"
base64 = "0.22.1"
ipnetwork = "0.21.1"
subtle = "2.6.1"
governor = "0.10.2"
fireblocks-sdk = { git = "https://github.com/0xgleb/fireblocks-sdk-rs.git", branch = "fix/confirming-not-terminal" }
ciborium = "0.2.2"
flate2 = "1.1.9"

[dev-dependencies]
alloy-node-bindings = "1.0.41"
alloy-sol-types = "1.4.1"
event-sorcery = { git = "https://github.com/ST0X-Technology/event-sorcery.git", tag = "0.1.1", features = [
  "test-support",
] }
httpmock = "0.8.2"
proptest = "1.10.0"
rand = "0.8"
rsa = "0.9.10"
rust_decimal_macros = "1.40.0"
tempfile = "3.23.0"
tokio = { version = "1.48.0", features = ["macros"] }
tracing-test = { version = "0.2.6", features = ["no-env-filter"] }

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
unwrap_used = "deny"
enum_glob_use = "allow"

# `priority = -1` allow for allowing lints enabled by a group to be re-disabled
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

doc_markdown = "allow"
items_after_statements = "allow"
redundant_pub_crate = "allow"
