[package]
name = "st0x-issuance"
version = "0.1.0"
edition = "2024"
default-run = "st0x-issuance"

[lints]
workspace = true

[dependencies]
st0x-issuance-dto = { path = "crates/dto", features = ["utoipa"] }
event-sorcery = { git = "https://github.com/ST0X-Technology/event-sorcery.git", tag = "0.1.2" }
sqlite-es = { git = "https://github.com/ST0X-Technology/event-sorcery.git", tag = "0.1.2" }
cqrs-es = "0.5.0"
async-trait = "0.1.89"
rocket = { version = "0.5.1", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
sqlx = { version = "0.9.0", features = [
  "sqlite",
  "chrono",
  "runtime-tokio",
  "tls-rustls",
  "macros",
  "migrate",
] }
thiserror = { workspace = true }
tracing = "0.1.41"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
clap = { workspace = true, features = ["env"] }
alloy = { version = "1.0.41", features = [
  "provider-ws",
  "provider-http",
  "pubsub",
  "node-bindings",
  "rand",
] }
rust_decimal = { version = "1.39.0", features = ["serde"] }
tokio = { workspace = true, features = ["time"] }
reqwest = { workspace = true, features = ["blocking", "gzip"] }
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tracing-opentelemetry = "0.31.0"
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio"] }
opentelemetry-otlp = "0.30.0"
backon = "1.6.0"
futures = "0.3.31"
url = { workspace = true }
anyhow = "1.0.100"
dotenvy = "0.15.7"
itertools = "0.14.0"
base64 = "0.22.1"
ipnetwork = "0.21.1"
subtle = "2.6.1"
governor = "0.10.2"
fireblocks-sdk = { git = "https://github.com/0xgleb/fireblocks-sdk-rs.git", branch = "fix/confirming-not-terminal" }
ciborium = "0.2.2"
flate2 = "1.1.9"
utoipa = { version = "5.5.0", features = ["rocket_extras"] }
utoipa-swagger-ui = { version = "9.0.2", features = ["rocket"] }
# Exact pins: migrations/*_apalis_job_tables.sql hand-replays apalis-sqlite's
# final Jobs/Workers schema (we own the migration instead of running apalis's
# migrator, which would race our _sqlx_migrations). apalis-sqlite's compiled
# queries depend on the exact column order/names of that schema, so on ANY bump
# of these pins the migration must be re-replayed from the new apalis-sqlite
# migrations/ — otherwise the positional INSERT silently desyncs at runtime.
#
# These are pre-release RCs: the public API is not stable, bug fixes in later
# RCs are NOT picked up under the `=` pin, and 1.0.0 final may ship schema/API
# changes. Track the 1.0.0 final release and upgrade to it (re-replaying the
# migration as above) before this service goes to production.
apalis = "=1.0.0-rc.9"
apalis-sqlite = "=1.0.0-rc.8"

[dev-dependencies]
alloy-node-bindings = "1.0.41"
alloy-sol-types = "1.4.1"
event-sorcery = { git = "https://github.com/ST0X-Technology/event-sorcery.git", tag = "0.1.2", features = [
  "test-support",
] }
httpmock = { workspace = true }
proptest = "1.10.0"
rand = "0.8"
rsa = "0.9.10"
rust_decimal_macros = "1.40.0"
st0x-issuance-client = { path = "crates/client" }
tempfile = "3.23.0"
tokio = { workspace = true, features = ["macros"] }
tracing-test = { version = "0.2.6", features = ["no-env-filter"] }

[workspace]
members = ["crates/dto", "crates/client"]

[workspace.dependencies]
alloy-primitives = { version = "1.6.0", features = ["serde"] }
clap = { version = "4.5.49", features = ["derive"] }
httpmock = "0.8.2"
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.17"
tokio = { version = "1.48.0" }
ts-rs = "11.0.1"
url = "2.5.7"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
enum_glob_use = "allow"

# `priority = -1` allow for allowing lints enabled by a group to be re-disabled
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }

doc_markdown = "allow"
items_after_statements = "allow"
redundant_pub_crate = "allow"
