[package]
name = "st0x-issuance-client"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { workspace = true }
st0x-issuance-dto = { path = "../dto" }
thiserror = { workspace = true }
url = { workspace = true }

[dev-dependencies]
httpmock = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt"] }

[lints]
workspace = true
