[package]
name = "st0x-issuance-dto"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy-primitives = { workspace = true }
serde = { workspace = true }
ts-rs = { workspace = true }
utoipa = { version = "5.5.0", optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[lints]
workspace = true

[features]
utoipa = ["dep:utoipa"]
